src/snapshots/afrotd__parser__tests__rule_html_2.21.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.21.1 Scrimmage Down
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Scrimmage Down ist die Aktion beider Teams während eines
                Downs, der mit einem Snap beginnt. Beachte: Ein Try Down ist
                ein Scrimmage Down, der beginnt, wenn der Referee den Ball
                freigibt (Regel 8.3.2.b).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.21.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
