src/snapshots/afrotd__parser__tests__rule_html_2.21.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.21.2 Scrimmage Line
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die Scrimmage Line für jedes Team ist etabliert, wenn der Ball
                spielbereit ist. Sie ist die Meterlinie und ihre vertikale
                Fläche darüber, die den Punkt des Balles berührt, der am
                nächsten zur eigenen Endzone eines Teams liegt.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.21.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
