src/snapshots/afrotd__parser__tests__rule_html_2.22.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.22.1 Shift
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Ein Shift ist ein gleichzeitiger Wechsel der Position oder
                der Stellung von zwei oder mehreren Offense Spielern, nachdem
                der Ball vor dem Snap zu einem Scrimmage Down spielbereit ist
                (A.R. 7.1.3.I und 7.1.3.II und A.R. 7.1.2.I bis 7.1.2.IV).
                </li>
                <li>Der Shift endet, wenn alle Spieler für eine volle Sekunde
                bewegungslos waren.
                </li>
                <li>Der Shift wird fortgesetzt, wenn ein oder mehrere Spieler
                sich bewegen, bevor die Ein-Sekunden-Pause beendet ist.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.22.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
