src/snapshots/afrotd__parser__tests__rule_html_2.23.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.23.1 Snappen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Legales Snappen (ein Snap) ist das Übergeben oder
                Zurückwerfen des Balles durch eine schnelle und durchgehende
                Bewegung mit einer oder beiden Händen von seiner ruhenden
                Position am Boden aus, wobei der Ball die Hand oder die Hände
                des Snappers durch diese Bewegung tatsächlich verlassen muss
                (Regel 4.1.4).
                </li>
                <li>Der Snap beginnt, wenn der Ball legal bewegt wird und
                endet, wenn der Ball die Hände des Snappers verlässt. Dadurch
                wird der Ball live (Regel 4.1.1) (A.R. 2.23.1.I und 2.23.1.II,
                A.R. 7.1.5.I und 7.1.5.II).
                </li>
                <li>Wenn der Ball während irgendeiner Rückwärtsbewegung des
                legalen Snaps aus der Hand des Snappers rutscht, wird er zum
                Rückpass und ist im Spiel (Regel 4.1.1).
                </li>
                <li>Während der Ball vor dem nächsten Snap auf dem Boden liegt,
                muss seine Längsachse rechtwinklig zur Scrimmage Line liegen
                (Regel 7.1.3).
                </li>
                <li>Sofern der Ball nicht rückwärts bewegt wird, startet diese
                Bewegung keinen legalen Snap. Es ist kein legaler Snap, wenn
                der Ball zuerst vorwärts bewegt oder angehoben wird.
                </li>
                <li>Wird der Ball während des legalen Snaps von Team B berührt,
                so bleibt der Ball dead und Team B wird bestraft. Wird der Ball
                während eines illegalen Snaps durch Team B berührt, bleibt der
                Ball dead und Team A wird bestraft (A.R. 7.1.5.I und 7.1.5.II).
                </li>
                <li>Der Snap muss nicht zwischen den Beinen des Snappers
                durchgeführt werden. Um legal zu sein, muss es jedoch eine
                schnelle und durchgehende Rückwärtsbewegung sein.
                </li>
                <li>Der Ball muss auf oder innerhalb der Hash Marks gesnappt
                werden.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.23.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
