src/snapshots/afrotd__parser__tests__rule_html_2.25.10.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.25.10 Basic Spot
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Der Basic Spot ist ein Fixpunkt zur Feststellung des
                Enforcement Spots für Strafen nach dem Drei-und-Eins-Prinzip
                (Regel 2.33.1). Basic Spots für die verschiedenen Spieltypen
                sind in Regel 10.2.2.d aufgeführt.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.25.10"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
